--- a/style.css
+++ b/style.css
@@ -442,3 +442,75 @@ label{
     text-align: center;
     font-size: 40px !important;
 }
+
+.lucky-container{
+    width: 440px;
+    height: 40px;
+    background-color: black;
+    color:white;
+    font-size: 16px;
+    text-align: left;
+    margin-left: 30px;
+}
+
+.summon-container{
+    width: 440px;
+    height: 40px;
+    background-color: black;
+    color:white;
+    font-size: 16px;
+    text-align: left;
+    margin-top: 40px;
+    margin-left: 30px;
+    margin-bottom: 20px;
+}
+
+.lucky{
+    margin-left: 15px;
+    margin-top: 4px;
+    background-color: rgb(128, 161, 141);;
+}
+
+.summons{
+    margin-left: 15px;
+    margin-top: 4px;
+    background-color: rgb(128, 161, 141);;
+}
+
+
+.notes-container{
+    width: 500px;
+    padding: 30px;
+}
+
+#subject{
+    background-color:#f8f9fa;
+    color:rgb(128, 161, 141);
+    font-size: 18px;
+    border:4px;
+    border-color: black;
+    border-style:solid; 
+    
+}
+
+#luckyPic{
+    height: 20px;
+    width: 20px;
+}
+
+.spellbtn{
+    margin-left: 50px;
+   width: 400px; 
+   background-color:rgb(128, 161, 141) ;
+}
+
+#spellDrop{
+    margin-left: 50px;
+    width: 400px; 
+   background-color:rgb(128, 161, 141) ;
+}
+
+#addModel{
+    width: 400px; 
+   background-color:rgb(128, 161, 141) ;
+}
